2009-12-10 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* add inotify for process environment variables monitoring
	* change process log format

2009-09-11 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* Bug fix: log actural read/write bytes
	* Bug fix: log actural read/write bytes

2009-07-08 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* Add process accounting by netlink
	* Add process accounting by netlink

2009-06-08 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* use struct timespec for more precisely timing
	* ftrac logging system call: trace.log
	* ftrac logging process and file information: proc.map and file.map
	* logging runtime environments

2009-05-25 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* change name: ftrac_release -> ftrac_close
	* add FTRAC_TRACE_NONE to remove tracing code
	* using fuse_file_info->fh

2009-05-10 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* bug fix: wrong directory entry in readdir()
	* bug fix: readdir statistics accumulataion
	* glib hash table works even if glib < 2.14

2009-05-09 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* add statistics for total system call elapsed time
	* add signal to notify caller when initialization is done
	* add cache timeout option to reduce long-term memory usage

2009-05-06 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
	* ftrac v0.1 release
	* basic file system calls tracking